fix alignment

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -285,7 +285,7 @@ body {
   font-style: normal;
 }
 
-main {
+.container {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -305,7 +305,7 @@ footer {
   margin: 0 auto;
   display: flex;
   gap: 8px;
-  padding-bottom: 60px;
+  padding-top: 60px;
 }
 
 /*# sourceMappingURL=main.css.map */
