--- a/assets/stylesheets/partials/_layout.scss
+++ b/assets/stylesheets/partials/_layout.scss
@@ -36,14 +36,15 @@ body {
 }
 
 .container {
-}
-main {
   width: 100%;
   display: flex;
   flex-direction: column;
   max-width: var(--content-width);
   padding: 120px 8px 60px;
   margin: 0 auto;
+}
+
+main {
 }
 
 p {
@@ -57,5 +58,5 @@ footer {
   margin: 0 auto;
   display: flex;
   gap: 8px;
-  padding-bottom: 60px;
+  padding-top: 60px;
 }
